--- a/src/ImageFlip/flip.styles.scss
+++ b/src/ImageFlip/flip.styles.scss
@@ -4,6 +4,7 @@
   width: 460px;
   height: 250px;
   position: relative;
+  cursor: pointer;
 
   .field-left-flip-front {
     img {
@@ -51,10 +52,22 @@
     width: 100%;
     height: 100%;
     text-align: center;
-    transition: transform 1s;
+    transition: transform 0.8s;
     transform-style: preserve-3d;
   }
   &:hover .field-left-flip-inner {
     transform: rotateY(180deg);
+  }
+}
+@media screen and (max-width: 1100px) {
+  .field-left-flip {
+    width: 420px;
+    height: 230px;
+  }
+}
+@media screen and (max-width: 950px) {
+  .field-left-flip {
+    width: 100%;
+    height: 250px;
   }
 }
