--- a/src/components/navbar/navbar.styles.scss
+++ b/src/components/navbar/navbar.styles.scss
@@ -184,3 +184,41 @@
     }
   }
 }
+@media screen and (max-width: 1100px) {
+  .list-nav {
+    ul {
+      li {
+        margin: 0 0.5rem;
+      }
+
+      li:nth-child(3),
+      li:nth-child(4) {
+        display: none;
+      }
+    }
+  }
+  .select-dropdown {
+    width: 11rem;
+    padding: 0 0;
+  }
+}
+@media screen and (max-width: 550px) {
+  .list-nav {
+    ul {
+      justify-content: center;
+      li {
+        margin: 0 0.2rem;
+        font-size: 0.85rem;
+      }
+      li:nth-child(3),
+      li:nth-child(2),
+      li:nth-child(4) {
+        display: none;
+      }
+    }
+  }
+  .select-dropdown {
+    width: 9rem;
+    padding: 0 0;
+  }
+}
