--- a/src/pages/singleField/sfield.styles.scss
+++ b/src/pages/singleField/sfield.styles.scss
@@ -43,13 +43,15 @@
   justify-content: space-between;
   border-bottom: 2px solid rgba(0, 0, 0, 0.041);
   position: relative;
+
   .sfield-post-text {
     align-self: flex-start;
-    width: 32rem;
+    width: 40rem;
 
     h3 {
       font-family: "Poppins", sans-serif;
       font-size: 2rem;
+      margin-top: 0.5rem;
       margin-bottom: 0.9rem;
       font-weight: 600;
       text-transform: capitalize;
@@ -69,10 +71,13 @@
 }
 .sfield-image {
   width: 460px;
-  height: 260px;
-
+  height: 300px;
+  .field-left-flip {
+    width: 500px;
+    height: 100%;
+  }
   img {
-    border-radius: 2px;
+    border-radius: 7px;
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -84,7 +89,7 @@
   }
 }
 .sfield-likes {
-  width: 6.5rem;
+  width: 7rem;
   position: absolute;
   bottom: 1.8rem;
   right: 1rem;
@@ -98,7 +103,7 @@
     font-weight: 500;
   }
   .sfield-like-icon {
-    font-size: 1.1rem;
+    font-size: 1.4rem;
     cursor: pointer;
     margin-right: 0.4rem;
     position: relative;
@@ -151,5 +156,128 @@
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+@media screen and (max-width: 1200px) {
+  .sfield-contents {
+    padding: 1% 6%;
+  }
+  .sfield-posts {
+    padding: 1% 0 2%;
+  }
+  .post-align-left {
+    flex-direction: row;
+  }
+  .sfield-post-box,
+  .post-align-left {
+    flex-direction: column;
+    justify-content: inherit;
+    margin-bottom: 3rem;
+    .sfield-post-text {
+      align-self: flex-start;
+      width: 100%;
+      padding-bottom: 3rem;
+      h3 {
+        margin-top: 0.5rem;
+        font-family: "Poppins", sans-serif;
+        font-size: 1.8rem;
+        margin-bottom: 0.9rem;
+        font-weight: 600;
+        text-transform: capitalize;
+      }
+      .sfield-desp {
+        font-family: "Poppins", sans-serif;
+        display: block;
+        margin-top: 0.9rem;
+        line-height: 1.8;
+        font-size: 0.95rem;
+        font-weight: 400;
+      }
+    }
+  }
+  .sfield-image {
+    width: 100%;
+    height: 300px;
+
+    .field-left-flip {
+      width: 100%;
+      height: 100%;
+      img {
+        border-radius: 7px;
+      }
+    }
+  }
+  .sfield-likes {
+    width: 7.5rem;
+    position: absolute;
+    bottom: 1.8rem;
+    right: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    span {
+      display: flex;
+      align-items: center;
+      font-size: 0.9rem;
+      font-weight: 500;
+    }
+    .sfield-like-icon {
+      font-size: 1.28rem;
+      cursor: pointer;
+      margin-right: 0.4rem;
+      position: relative;
+      top: 0.02rem;
+      &:hover {
+        fill: #29c97e;
+      }
+    }
+  }
+}
+@media screen and (max-width: 720px) {
+  .sfield-contents {
+    padding: 1% 6%;
+  }
+  .sfield-posts {
+    padding: 1% 0 2%;
+  }
+  .post-align-left {
+    flex-direction: row;
+  }
+  .sfield-post-box,
+  .post-align-left {
+    flex-direction: column;
+    justify-content: inherit;
+    margin-bottom: 3rem;
+    .sfield-post-text {
+      align-self: flex-start;
+      width: 100%;
+      padding-bottom: 3rem;
+      h3 {
+        margin-top: 0.5rem;
+        font-family: "Poppins", sans-serif;
+        font-size: 1.6rem;
+        margin-bottom: 0.9rem;
+        font-weight: 600;
+        text-transform: capitalize;
+      }
+      .sfield-desp {
+        font-family: "Poppins", sans-serif;
+        display: block;
+        margin-top: 0.9rem;
+        line-height: 1.8;
+        font-size: 0.95rem;
+        font-weight: 400;
+      }
+    }
+  }
+  .sfield-image {
+    width: 100%;
+    height: 250px;
+    img {
+      border-radius: 7px;
+    }
+    .field-left-flip {
+      width: 100%;
+    }
   }
 }
