--- a/src/pages/Auth/auth.styles.scss
+++ b/src/pages/Auth/auth.styles.scss
@@ -81,6 +81,8 @@
     font-weight: 500;
     letter-spacing: 0.7px;
     color: rgb(53, 194, 107);
+    font-family: "Poppins", sans-serif;
+    margin-bottom: 0.2rem;
   }
   form {
     max-width: 55rem;
@@ -92,7 +94,7 @@
 
       button {
         @include button();
-        margin-top: 0.5rem;
+        margin-top: 1rem;
         padding: 0.55rem 0;
         width: 100%;
         letter-spacing: 0.8px;
@@ -147,7 +149,7 @@
       }
     }
     label {
-      font-weight: 500;
+      font-weight: 400;
       color: rgba(0, 0, 0, 0.747);
       position: absolute;
       bottom: 1rem;
@@ -168,8 +170,13 @@
       right: 0;
       cursor: pointer;
       padding: 0.3rem 0.3rem 0.4rem;
+      opacity: 0.6;
       &:hover {
+        opacity: 1;
         color: rgb(233, 45, 45);
+      }
+      &:active {
+        opacity: 1;
       }
     }
     .underline {
@@ -200,6 +207,47 @@
       height: 100%;
       object-fit: cover;
       border-radius: 50%;
+    }
+  }
+}
+@media screen and (max-width: 720px) {
+  .auth-left {
+    .input-wrapper {
+      input[type="file"] {
+        &:focus ~ label,
+        &:valid ~ label {
+          transform: translateY(-10px);
+          font-size: 0.8rem;
+          color: rgb(53, 194, 107);
+        }
+        &:focus ~ .underline::before,
+        &:valid ~ .underline::before {
+          transform: scale(1);
+        }
+      }
+      label {
+        font-size: 1rem;
+      }
+      .check-password {
+        font-size: 0.9rem;
+      }
+    }
+    .uploaded-img {
+      width: 100%;
+      height: 150px;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 0;
+      }
+    }
+    .profile-label {
+      top: -1.5rem;
+      font-size: 0.8rem !important;
+      right: 0;
+      left: auto;
     }
   }
 }
