--- a/src/pages/Item/item.styles.scss
+++ b/src/pages/Item/item.styles.scss
@@ -6,7 +6,7 @@
 }
 .item-contents {
   padding: 2% 0 5%;
-  width: 85%;
+  width: 65%;
   margin: 0 auto;
 }
 
@@ -20,13 +20,54 @@
   height: 400px;
   object-fit: cover;
   border-radius: 7px;
-  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.075);
+
   position: relative;
+  .itempostlikes {
+    display: block;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 3.5rem;
+    background-color: rgb(255, 255, 255);
+    padding: 0;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+
+    span {
+      margin: 0 1.6rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .itempostlikeicon {
+      font-size: 1.28rem;
+      margin-right: 0.5rem;
+      cursor: pointer;
+      color: #61c797;
+
+      &:hover {
+        color: rgb(3, 177, 3);
+      }
+    }
+    .itempostdislikeicon {
+      font-size: 1.28rem;
+      cursor: pointer;
+      margin-left: 0.5rem;
+      margin-right: 0rem;
+      color: rgba(15, 15, 15, 0.74);
+
+      &:hover {
+        color: rgb(197, 9, 9);
+      }
+    }
+  }
   .itempostimg {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 7px;
+    border-radius: 4px;
   }
   .item-download-icon {
     position: absolute;
@@ -49,9 +90,9 @@
   font-family: "Poppins", sans-serif;
   position: relative;
   .item-details {
-    margin-top: 3.5rem;
+    margin-top: 2.5rem;
     h1 {
-      font-size: 2rem;
+      font-size: 1.7rem;
 
       font-weight: 600;
       margin-bottom: 0.8rem;
@@ -63,42 +104,8 @@
     p {
       margin-top: 2.2rem;
       font-size: 0.95rem;
-      font-weight: 400;
-      line-height: 1.8;
-    }
-  }
-  .itempostlikes {
-    display: block;
-    position: absolute;
-    right: 0;
-    top: -2rem;
-
-    width: 8rem;
-    padding: 0.35rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    span {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    .itempostlikeicon {
-      font-size: 1.28rem;
-      margin-right: 0.5rem;
-      cursor: pointer;
-      &:hover {
-        color: rgb(3, 177, 3);
-      }
-    }
-    .itempostdislikeicon {
-      font-size: 1.28rem;
-      cursor: pointer;
-      margin-left: 0.5rem;
-      margin-right: 0rem;
-      &:hover {
-        color: rgb(197, 9, 9);
-      }
+      font-weight: 500;
+      line-height: 1.9;
     }
   }
 }
@@ -108,8 +115,7 @@
     width: 100%;
     height: 300px;
     object-fit: cover;
-    border-radius: 7px;
-    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.075);
+    border-radius: 5px;
   }
   .item-container {
     overflow: hidden;
@@ -121,5 +127,49 @@
   }
   .item-body {
     padding: 0;
+  }
+  .item-post-details {
+    .item-details {
+      h1 {
+        font-size: 1.5rem;
+
+        font-weight: 600;
+        margin-bottom: 0.8rem;
+      }
+      p {
+        font-size: 0.95rem;
+      }
+    }
+  }
+}
+@media screen and (max-width: 720px) {
+  .itempostimg-div {
+    height: 320px;
+  }
+
+  .item-container {
+    overflow: hidden;
+  }
+  .item-contents {
+    padding: 3% 0 5%;
+    width: 92%;
+    margin: 0 auto;
+  }
+  .item-body {
+    padding: 0;
+  }
+  .item-post-details {
+    .item-details {
+      margin-top: 2rem;
+      h1 {
+        font-size: 1.2rem;
+
+        font-weight: 600;
+        margin-bottom: 0.8rem;
+      }
+      p {
+        font-size: 0.95rem;
+      }
+    }
   }
 }
