--- a/src/pages/home/Home.styles.scss
+++ b/src/pages/home/Home.styles.scss
@@ -61,26 +61,30 @@
 
   h1 {
     margin-top: 0;
-    font-size: 1.9rem;
+    font-weight: 600;
+    font-size: 1.55rem;
     margin-bottom: 1.4rem;
+    font-family: "Poppins", sans-serif;
   }
   .post-details {
+    font-family: "Poppins", sans-serif;
     display: inline-block;
     margin-top: 1.4rem;
-    font-size: 0.95rem;
-    font-weight: 500;
+    font-size: 1rem;
+    font-weight: 400;
     line-height: 1.9;
     width: 90%;
   }
   .a-tag {
     margin-top: 1.4rem;
-    padding: 0.5rem 0.9rem;
+    padding: 0.5rem 0.9rem 0.6rem;
     background-color: rgba(173, 216, 230, 0.562);
     color: rgb(0, 0, 0);
     font-size: 0.85rem;
     text-decoration: none;
     &:hover {
-      color: rgb(5, 102, 146);
+      background-color: black;
+      color: rgb(252, 252, 252);
     }
   }
 }
@@ -140,7 +144,7 @@
     padding: 0;
     padding-bottom: 2rem;
     h1 {
-      font-size: 1.6rem;
+      font-size: 1.4rem;
       margin-bottom: 1.2rem;
     }
     .post-details {
@@ -171,13 +175,13 @@
     padding: 0;
     padding-bottom: 2rem;
     h1 {
-      font-size: 1.4rem;
+      font-size: 1.2rem;
       margin-bottom: 1.2rem;
     }
     .post-details {
       width: 100%;
       margin-top: 0.8rem;
-      font-size: 0.85rem;
+      font-size: 0.95rem;
       margin-bottom: 0.8rem;
     }
     .a-tag {
