--- a/src/pages/singleField/sfield.styles.scss
+++ b/src/pages/singleField/sfield.styles.scss
@@ -109,7 +109,7 @@
     margin-right: 0.4rem;
     position: relative;
     top: 0.02rem;
-    color: #61c797;
+    color: #333836;
     &:hover {
       fill: #29c97e;
     }
