--- a/src/pages/Create/create.styles.scss
+++ b/src/pages/Create/create.styles.scss
@@ -250,8 +250,8 @@ form {
       animation: image-animate 2s cubic-bezier(0.19, 1, 0.22, 1) forwards;
     }
     .error-img {
-      width: 70%;
-      height: 70%;
+      width: 50%;
+      height: 50%;
       object-fit: contain;
     }
   }
@@ -359,7 +359,7 @@ form {
       right: 0.5rem;
       width: 95%;
       margin-top: 2rem;
-      padding-bottom: 3rem;
+      padding-bottom: 6%;
       height: 260px;
       background-color: rgba(0, 0, 0, 0);
       img {
