--- a/src/pages/Item/item.styles.scss
+++ b/src/pages/Item/item.styles.scss
@@ -6,7 +6,7 @@
 }
 .item-contents {
   padding: 2% 0 5%;
-  width: 65%;
+  max-width: 50rem;
   margin: 0 auto;
 }
 
@@ -28,8 +28,9 @@
     right: 0;
     bottom: 0;
     width: 100%;
-    height: 3.5rem;
-    background-color: rgb(255, 255, 255);
+    height: 2.8rem;
+    background-color: rgba(253, 253, 253, 0.11);
+
     padding: 0;
     display: flex;
     justify-content: flex-start;
@@ -40,26 +41,30 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      color: white;
     }
     .itempostlikeicon {
-      font-size: 1.28rem;
+      font-size: 1.2rem;
       margin-right: 0.5rem;
       cursor: pointer;
-      color: #61c797;
+      color: rgba(255, 255, 255, 0.918);
 
       &:hover {
         color: rgb(3, 177, 3);
       }
     }
+    .itempostlikeiconactive {
+      color: rgba(255, 255, 255, 0.966);
+    }
     .itempostdislikeicon {
-      font-size: 1.28rem;
+      font-size: 1.2rem;
       cursor: pointer;
       margin-left: 0.5rem;
       margin-right: 0rem;
-      color: rgba(15, 15, 15, 0.74);
+      color: rgba(255, 255, 255, 0.918);
 
       &:hover {
-        color: rgb(197, 9, 9);
+        color: rgb(216, 61, 61);
       }
     }
   }
@@ -71,11 +76,11 @@
   }
   .item-download-icon {
     position: absolute;
-    bottom: 1rem;
-    right: 1.5rem;
+    right: 1rem;
+    bottom: 0.8rem;
     z-index: 50;
-    font-size: 1.4rem;
-    color: rgba(248, 248, 248, 0.664);
+    font-size: 1.2rem;
+    color: rgba(250, 250, 250, 0.719);
     cursor: pointer;
     transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
     &:hover {
@@ -92,7 +97,7 @@
   .item-details {
     margin-top: 2.5rem;
     h1 {
-      font-size: 1.7rem;
+      font-size: 1.65rem;
 
       font-weight: 600;
       margin-bottom: 0.8rem;
