--- a/src/pages/home/Home.styles.scss
+++ b/src/pages/home/Home.styles.scss
@@ -202,3 +202,15 @@
     }
   }
 }
+@media screen and (max-width: 520px) {
+  .home-right-details {
+    width: 100%;
+    height: 210px;
+    background-color: lightcyan;
+    img {
+      border-radius: 2px;
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
