--- a/src/ImageFlip/flip.styles.scss
+++ b/src/ImageFlip/flip.styles.scss
@@ -7,6 +7,7 @@
   cursor: pointer;
 
   .field-left-flip-front {
+    transition: all 0.5s ease-in-out;
     img {
       width: 100%;
       height: 100%;
@@ -14,17 +15,22 @@
     }
   }
   .field-left-flip-back {
-    background: rgba(247, 247, 247, 0.959);
-    transform: rotateY(180deg);
+    height: 100%;
+
+    opacity: 0;
+    z-index: 18;
+
     color: white;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    pointer-events: none;
+    transition: all 0.8s cubic-bezier(0.19, 1, 0.22, 1);
     a {
       text-decoration: none;
-      color: black;
+      color: rgb(255, 255, 255);
     }
     p {
       margin: 0.2rem 0 0.4rem;
@@ -36,6 +42,9 @@
         color: #29c97e;
       }
     }
+  }
+  .field-left-flip-front {
+    z-index: 20;
   }
   .field-left-flip-front,
   .field-left-flip-back {
@@ -50,13 +59,19 @@
   .field-left-flip-inner {
     position: relative;
     width: 100%;
+
     height: 100%;
     text-align: center;
     transition: transform 0.8s;
-    transform-style: preserve-3d;
+    overflow: hidden;
   }
-  &:hover .field-left-flip-inner {
-    transform: rotateY(180deg);
+  &:hover .field-left-flip-front {
+    filter: blur(0.6rem);
+  }
+  &:hover .field-left-flip-back {
+    opacity: 1;
+    pointer-events: all;
+    z-index: 30;
   }
 }
 @media screen and (max-width: 1100px) {
