--- a/src/pages/fields/fields.styles.scss
+++ b/src/pages/fields/fields.styles.scss
@@ -45,6 +45,7 @@
   }
 }
 .field-header {
+  padding-top: 3%;
   width: 85%;
   display: flex;
   justify-content: space-between;
@@ -55,7 +56,9 @@
     align-items: center;
 
     h2 {
+      display: block;
       font-size: 1.5rem;
+      text-overflow: ellipsis;
       color: #242424b9;
     }
   }
@@ -67,11 +70,14 @@
   display: flex;
   width: 85%;
   margin: 2rem auto;
-  padding-bottom: 6%;
+  padding-bottom: 3%;
+
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
+  border-bottom: 3px solid rgba(0, 0, 0, 0.068);
 }
+
 .readtag {
   font-size: 0.85rem;
   color: #29c97e;
@@ -105,6 +111,9 @@
     font-size: 1.4rem;
     margin-bottom: 0.8rem;
     color: #353535ee;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
     &:hover {
       color: #1a9e60;
       text-decoration: underline;
@@ -172,9 +181,10 @@
         }
       }
       .delete-item {
-        font-size: 1.15rem;
+        color: #616161;
+        font-size: 1.1rem;
         cursor: pointer;
-        padding: 0.2rem;
+        padding: 0.3rem;
         &:hover {
           color: rgb(44, 180, 10);
         }
@@ -185,7 +195,7 @@
       right: 1rem;
       top: 0.5em;
       padding: 0.2rem 0.25rem;
-      z-index: 50;
+      z-index: 100;
       .fav-icon {
         font-size: 1.05rem;
         padding: inherit;
@@ -193,9 +203,6 @@
         cursor: pointer;
         padding: inherit;
         animation: favAnimateout 0.7s cubic-bezier(0.19, 1, 0.22, 1);
-        &:hover {
-          color: rgba(221, 3, 3, 0.897);
-        }
       }
       .fav-fill {
         color: rgba(221, 3, 3, 0.897);
@@ -255,17 +262,26 @@
         font-size: 1.2rem;
         padding: 0.2rem 0.15rem;
         cursor: pointer;
-        margin-right: 0.2rem;
+        margin-right: 0.3rem;
         color: rgba(8, 8, 8, 0.753);
+        transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
         &:hover {
           fill: #29c97e;
+        }
+        &:active {
+          transform: scale(1.4);
         }
       }
       .dislike {
         margin-right: 0;
-        margin-left: 0.2rem;
+        margin-left: 0.3rem;
+        transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
+
         &:hover {
           fill: #c03c2a;
+        }
+        &:active {
+          transform: scale(1.4);
         }
       }
     }
