--- a/src/ImageFlip/flip.styles.scss
+++ b/src/ImageFlip/flip.styles.scss
@@ -55,6 +55,7 @@
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
+    transition: all 0.4s ease-in-out;
   }
   .field-left-flip-inner {
     position: relative;
