--- a/src/pages/Create/create.styles.scss
+++ b/src/pages/Create/create.styles.scss
@@ -324,6 +324,9 @@
 }
 
 @media screen and (max-width: 750px) {
+  .create-form {
+    width: 85%;
+  }
   .create-contents {
     width: 100%;
     height: auto;
@@ -360,7 +363,7 @@
       width: 95%;
       margin-top: 2rem;
       padding-bottom: 6%;
-      height: 260px;
+      height: 180px;
       background-color: rgba(0, 0, 0, 0);
       img {
         width: 100%;
