--- a/src/pages/Item/item.styles.scss
+++ b/src/pages/Item/item.styles.scss
@@ -51,7 +51,7 @@
     justify-content: flex-start;
     align-items: center;
     filter: drop-shadow(0px 10px 20px rgba(0, 0, 0, 0.021));
-    border: 2px solid #34f1998f;
+    border: 2px solid #34f1991e;
 
     span {
       margin: 0 1.6rem;
@@ -90,31 +90,52 @@
         transform: scale(1.4);
       }
     }
-    .item-download-icon {
+    .item-actions {
       position: absolute;
-      right: 1rem;
-      bottom: 1rem;
+      right: 1.2rem;
+      bottom: 0.1rem;
+      width: 10rem;
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 0 1rem;
+    }
+    .item-delete-icon {
+      font-size: 1.05rem;
+      padding: 0.5rem;
+      background: #00000002;
+      border-radius: 50%;
+      cursor: pointer;
+      color: #000000a1;
+      &:active {
+        animation: favAnimateout 0.7s cubic-bezier(0.19, 1, 0.22, 1);
+      }
+    }
+    .item-download-icon {
+      display: block;
       z-index: 50;
       font-size: 1.2rem;
       color: rgba(0, 0, 0, 0.719);
       cursor: pointer;
       transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
+      position: relative;
+      bottom: 0.2rem;
       &:hover {
         color: #34f199;
         transform: scale(1.05);
       }
     }
     .item-fav {
-      position: absolute;
-      bottom: 0.6rem;
-      right: 5rem;
       margin-left: 1rem;
       .fav-icon {
+        background: #00000002;
+        border-radius: 50%;
         font-size: 1.05rem;
         padding: inherit;
         color: #ff210438;
         cursor: pointer;
-        padding: inherit;
+        padding: 0.5rem;
         animation: favAnimateout 0.7s cubic-bezier(0.19, 1, 0.22, 1);
       }
       .fav-fill {
@@ -130,6 +151,9 @@
       align-items: center;
 
       width: 10rem;
+      p {
+        font-weight: 400;
+      }
     }
     margin-top: 2rem;
     h1 {
@@ -185,7 +209,7 @@
 }
 @media screen and (max-width: 720px) {
   .itempostimg-div {
-    height: 320px;
+    height: 260px;
   }
 
   .item-container {
@@ -201,19 +225,24 @@
   }
   .item-post-details {
     .itempostlikes {
-      height: 2.8rem;
-      border: 2px solid #34f1991e;
+      height: 2.85rem;
+
       span {
         font-size: 1rem;
+        margin: 0 1.6rem;
       }
+
       .likes {
+        margin-left: 1rem;
         font-size: 0.9em;
       }
       .itempostlikeicon {
         font-size: 1rem;
       }
-      .item-download-icon {
-        bottom: 0.8rem;
+
+      .item-actions {
+        width: 8rem;
+        bottom: -0.1rem;
       }
     }
     .item-details {
