--- a/src/pages/singleField/sfield.styles.scss
+++ b/src/pages/singleField/sfield.styles.scss
@@ -93,15 +93,35 @@
   position: absolute;
   bottom: 1rem;
   left: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row-reverse;
+  width: 8rem;
+  .sfield-delete {
+    .sfield-delete-icon {
+      cursor: pointer;
+      font-size: 1.2rem;
+      padding: 0.5rem;
+      background: #00000005;
+      border-radius: 50%;
+      &:active {
+        animation: favAnimateout 0.7s cubic-bezier(0.19, 1, 0.22, 1);
+      }
+    }
+  }
 }
 .sfield-fav {
   padding: 0.25rem 0.3rem;
   .sfield-fav-icon {
     font-size: 1.05rem;
-    padding: inherit;
+
+    background: #00000009;
+    border-radius: 50%;
+
     color: #ff210438;
     cursor: pointer;
-    padding: inherit;
+    padding: 0.5rem;
     animation: favAnimateout 0.7s cubic-bezier(0.19, 1, 0.22, 1);
     &:hover {
       color: rgba(221, 3, 3, 0.897);
