--- a/src/components/navbar/navbar.styles.scss
+++ b/src/components/navbar/navbar.styles.scss
@@ -30,12 +30,12 @@
   margin: 0 auto;
 }
 .brand-logo {
-  width: 100px;
-  height: 50px;
+  width: 150px;
+  height: 70px;
   img {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
   }
 }
 .nav-details {
@@ -50,8 +50,8 @@
   padding: 0 0;
 }
 .nav-profile {
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
   padding: 0.3rem;
   margin-left: 1rem;
   position: relative;
