--- a/src/pages/Profile/up.styles.scss
+++ b/src/pages/Profile/up.styles.scss
@@ -36,6 +36,7 @@
       border-radius: 50%;
       width: 100%;
       height: 100%;
+      object-fit: cover;
     }
   }
   .up-sidebar-details {
@@ -245,7 +246,7 @@
 
       img {
         border-radius: 0;
-        object-fit: cover;
+        object-fit: contain;
       }
     }
   }
