--- a/src/components/ProfileComp/upcomp.styles.scss
+++ b/src/components/ProfileComp/upcomp.styles.scss
@@ -110,15 +110,39 @@
         height: 100%;
         object-fit: cover;
       }
+      .canvas-div {
+        canvas {
+          width: 60px !important;
+          height: 60px !important;
+          object-fit: cover;
+          border-radius: 50%;
+        }
+      }
+      p {
+        margin-top: 1.5rem;
+      }
     }
     .up-progress-bar {
-      max-width: 10rem;
+      display: block;
+      width: 10rem;
       transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
       height: 0.25rem;
       margin-top: 20px;
-      margin-right: 38px;
+      margin-bottom: 20px;
+
       transform-origin: left;
+      transform: translateX(0);
       background-color: #4dbc92;
+    }
+  }
+}
+@media screen and (max-width: 1600px) {
+  .up-form {
+    flex-direction: column;
+    .up-form-right {
+      margin: 0;
+      padding: 0;
+      align-items: flex-start;
     }
   }
 }
@@ -131,6 +155,9 @@
     }
     .up-form-img {
       width: 95%;
+    }
+    .up-form-item:nth-child(1) {
+      margin-top: 0;
     }
     .up-form-right {
       margin-top: 0.5rem;
