--- a/src/pages/Auth/auth.styles.scss
+++ b/src/pages/Auth/auth.styles.scss
@@ -224,6 +224,14 @@
       height: 100%;
       object-fit: cover;
     }
+    .canvas-div {
+      canvas {
+        width: 60px !important;
+        height: 60px !important;
+        object-fit: cover;
+        border-radius: 50%;
+      }
+    }
     .progress-bar-reg {
       margin-top: 15px;
       width: 100%;
@@ -243,9 +251,25 @@
   }
 }
 @media screen and (max-width: 720px) {
+  .no-account {
+    p {
+      font-size: 0.82rem;
+    }
+  }
   .auth-contents {
     h1 {
       font-size: 1.8rem;
+    }
+    .auth-form {
+      .auth-btn {
+        button {
+          padding: 0.35rem 1rem 0.4rem;
+          font-size: 0.85rem;
+        }
+        .opt {
+          margin-top: 0.6rem;
+        }
+      }
     }
   }
   .auth-left {
@@ -264,7 +288,8 @@
         }
       }
       label {
-        font-size: 0.95rem;
+        font-size: 0.9rem;
+        font-weight: 400;
       }
       .check-password {
         font-size: 0.9rem;
@@ -280,8 +305,8 @@
       position: relative;
       top: 1.6em;
       img {
-        width: 100%;
-        height: 180px;
+        width: 300px;
+        height: 100%;
         object-fit: cover;
         border-radius: 0;
       }
