--- a/src/pages/fields/fields.styles.scss
+++ b/src/pages/fields/fields.styles.scss
@@ -58,8 +58,11 @@
     h2 {
       display: block;
       font-size: 1.5rem;
-      text-overflow: ellipsis;
+
       color: #242424b9;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
   .field-header-span {
@@ -204,33 +207,37 @@
     margin: 2rem 0;
     background-color: #ffffff;
     padding: 0.2rem 1.8rem 0.8rem;
-    border-radius: 5px;
+    border-radius: 10px;
     border: 2px solid rgba(0, 0, 0, 0.041);
-
+    filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.048));
     position: relative;
     .user-options {
       position: absolute;
       bottom: 0.9rem;
-      right: 0.9rem;
+      right: 1rem;
       display: flex;
       align-items: center;
-      justify-content: space-around;
+      flex-wrap: wrap;
+      justify-content: flex-end;
+      gap: 0 1.2rem;
       width: 7rem;
       .open-item {
         font-size: 1.1rem;
         color: #616161;
         padding: 0.2rem;
         cursor: pointer;
+        width: 100%;
+
         &:hover {
           color: black;
         }
       }
       .delete-item {
-        color: #616161;
-        font-size: 1.1rem;
+        color: #5a5a5a;
+        font-size: 1.05rem;
         cursor: pointer;
-        padding: 0.45rem 0.55rem;
-        background: #0000000e;
+        padding: 0.4rem 0.55rem 0.35rem;
+        background: #00000009;
         border-radius: 50%;
         &:hover {
           color: rgb(44, 180, 10);
@@ -239,7 +246,7 @@
     }
     .field-fav {
       position: absolute;
-      right: 1rem;
+      right: 0.5rem;
       top: 0.5em;
       padding: 0.2rem 0.25rem;
       z-index: 100;
@@ -300,12 +307,16 @@
   }
   h3 {
     font-family: "Poppins", sans-serif;
-    font-size: 1.38rem;
+    font-size: 1.35rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     margin-bottom: 0.6rem;
     width: 90%;
     margin-top: 0.5rem;
     font-weight: 600;
     // color: #05b439ee;
+
     letter-spacing: 0px;
     &:hover {
       color: #1a9e60;
