--- a/src/pages/home/Home.styles.scss
+++ b/src/pages/home/Home.styles.scss
@@ -42,8 +42,8 @@
   display: flex;
   align-items: center;
   img {
-    width: 30px;
-    height: 30px;
+    width: 28px;
+    height: 28px;
     border-radius: 50%;
     object-fit: cover;
   }
@@ -61,6 +61,11 @@
     opacity: 0.6;
   }
 }
+.home-t-span {
+  color: rgb(17, 17, 17);
+  font-weight: 600;
+}
+
 .home-left-details {
   width: 50%;
 
@@ -72,6 +77,7 @@
     margin-top: 0;
     font-weight: 600;
     font-size: 1.55rem;
+    color: rgba(2, 2, 2, 0.712);
     margin-bottom: 1.4rem;
     font-family: "Poppins", sans-serif;
   }
