--- a/src/pages/singleField/sfield.styles.scss
+++ b/src/pages/singleField/sfield.styles.scss
@@ -56,6 +56,14 @@
       margin-bottom: 0.9rem;
       font-weight: 600;
       text-transform: capitalize;
+      a {
+        text-decoration: none;
+        color: inherit;
+        &:hover {
+          color: #0ea861;
+          text-decoration: underline;
+        }
+      }
     }
     .sfield-desp {
       font-family: "Poppins", sans-serif;
@@ -89,22 +97,28 @@
     }
   }
 }
+.sfield-fav-div-left {
+  left: 1rem !important;
+  justify-content: flex-start !important;
+}
 .sfield-fav-div {
   position: absolute;
   bottom: 1rem;
-  left: 1rem;
+  right: 0rem;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  flex-direction: row-reverse;
+  justify-content: flex-end;
+  flex-direction: row;
+  gap: 0 1.8rem;
   width: 8rem;
   .sfield-delete {
     .sfield-delete-icon {
       cursor: pointer;
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       padding: 0.5rem;
       background: #00000005;
       border-radius: 50%;
+      color: #252525b7;
       &:active {
         animation: favAnimateout 0.7s cubic-bezier(0.19, 1, 0.22, 1);
       }
@@ -132,11 +146,15 @@
     animation: favAnimate 0.7s cubic-bezier(0.19, 1, 0.22, 1);
   }
 }
+.sfield-likes-left {
+  right: 1rem !important;
+  left: initial !important;
+}
 .sfield-likes {
   width: 7rem;
   position: absolute;
   bottom: 1.8rem;
-  right: 1rem;
+  left: 1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
