--- a/src/components/ProfileComp/upcomp.styles.scss
+++ b/src/components/ProfileComp/upcomp.styles.scss
@@ -50,6 +50,7 @@
   }
   .up-form-img-details {
     margin: 0.4rem 0 0.2rem;
+
     span {
       color: #4dbc92;
       font-size: 0.85rem;
@@ -59,6 +60,12 @@
         color: #000000;
       }
     }
+  }
+  .up-form-btn-mobile {
+    display: none;
+  }
+  .up-form-btn-desk {
+    display: block;
   }
   .up-form-btn {
     margin-top: 15px;
@@ -149,7 +156,7 @@
 @media screen and (max-width: 550px) {
   .up-form {
     margin: 0 auto;
-
+    height: auto;
     input {
       width: 90%;
     }
@@ -164,9 +171,15 @@
       align-items: flex-start;
       width: auto;
       margin-bottom: 1rem;
+      height: auto;
       .up-form-img-sel {
-        width: 95%;
-        height: 140px;
+        width: 100%;
+        height: auto;
+        img {
+          width: 100%;
+          height: 80%;
+          object-fit: cover;
+        }
       }
       .up-progress-bar {
         margin-top: 30px;
@@ -174,6 +187,12 @@
     }
     .up-form-btn {
       margin-top: 1rem;
+    }
+    .up-form-btn-desk {
+      display: none;
+    }
+    .up-form-btn-mobile {
+      display: block;
     }
   }
 
