--- a/src/pages/fields/fields.styles.scss
+++ b/src/pages/fields/fields.styles.scss
@@ -57,6 +57,7 @@
 
     h2 {
       display: block;
+      width: 8rem;
       font-size: 1.5rem;
 
       color: #242424b9;
@@ -67,6 +68,11 @@
   }
   .field-header-span {
     color: #4dbc92;
+    display: block;
+    width: 8rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
 .field-contents {
