--- a/src/components/ProfileComp/upcomp.styles.scss
+++ b/src/components/ProfileComp/upcomp.styles.scss
@@ -97,7 +97,7 @@
     img {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain;
     }
   }
   .up-form-right {
