--- a/src/components/navbar/navbar.styles.scss
+++ b/src/components/navbar/navbar.styles.scss
@@ -30,12 +30,13 @@
   margin: 0 auto;
 }
 .brand-logo {
-  width: 150px;
-  height: 80px;
+  width: 85px;
+  height: 70px;
+
   img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
   }
 }
 .nav-details {
@@ -203,14 +204,23 @@
   }
 }
 @media screen and (max-width: 550px) {
+  .navbar-wrapper {
+    padding-top: 0.5rem;
+    padding-bottom: 1.1rem;
+  }
+
   .brand-logo {
-    width: 100px;
-    height: 60px;
+    width: 75px;
+
     position: relative;
-    top: 0.5rem;
+    top: 0.2rem;
   }
   .nav-profile {
     padding: 0;
+    width: 55px;
+    height: 55px;
+    position: relative;
+    right: 0.3rem;
   }
   .list-nav {
     ul {
