--- a/src/pages/Auth/auth.styles.scss
+++ b/src/pages/Auth/auth.styles.scss
@@ -211,7 +211,7 @@
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
     width: 100%;
-    height: 300px;
+    height: auto;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -221,7 +221,7 @@
     top: 0.8rem;
     img {
       width: 300px;
-      height: 100%;
+      height: 300px;
       object-fit: cover;
     }
     .canvas-div {
@@ -233,10 +233,10 @@
       }
     }
     .progress-bar-reg {
-      margin-top: 15px;
+      margin-top: 30px;
       width: 100%;
       height: 0.2rem;
-      margin-bottom: 22px;
+      margin-bottom: 10px;
       flex-basis: 100%;
       span {
         display: block;
@@ -306,9 +306,15 @@
       top: 1.6em;
       img {
         width: 300px;
-        height: 100%;
+        height: 300px;
         object-fit: cover;
         border-radius: 0;
+      }
+      .progress-bar-reg {
+        margin: 10px 0 15px;
+        flex-basis: auto;
+        position: relative;
+        bottom: 0.7rem;
       }
     }
     .profile-label {
