--- a/src/pages/Item/item.styles.scss
+++ b/src/pages/Item/item.styles.scss
@@ -99,7 +99,7 @@
       display: flex;
       justify-content: flex-end;
       align-items: center;
-      gap: 0 1.4rem;
+      gap: 0 1rem;
     }
     .item-delete-icon {
       font-size: 1.1rem;
@@ -172,7 +172,7 @@
     margin-top: 2rem;
     h1 {
       font-size: 1.6rem;
-      color: rgba(2, 2, 2, 0.753);
+      color: rgba(2, 2, 2, 0.726);
       font-weight: 600;
       margin-bottom: 0.8rem;
       sub {
@@ -183,7 +183,7 @@
     .item-ptag {
       margin-top: 1rem;
       font-size: 0.95rem;
-      font-weight: 500;
+      font-weight: 400;
       line-height: 1.9;
     }
   }
@@ -247,16 +247,19 @@
       }
 
       .likes {
-        margin-left: 1rem;
+        margin-left: 0.95rem;
         font-size: 0.9em;
+        margin-right: 1.1rem;
       }
       .itempostlikeicon {
         font-size: 1rem;
       }
 
       .item-actions {
+        right: 0.7rem;
         width: 8rem;
         bottom: -0.1rem;
+        gap: 0 0.7rem;
       }
     }
     .item-details {
