--- a/src/pages/Profile/up.styles.scss
+++ b/src/pages/Profile/up.styles.scss
@@ -36,7 +36,7 @@
       border-radius: 2%;
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain;
       filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.048));
     }
   }
@@ -254,7 +254,7 @@
       margin-top: 10px;
       img {
         border-radius: 0;
-        object-fit: cover;
+        object-fit: contain;
       }
     }
     .up-sidebar-details {
