--- a/src/pages/fields/fields.styles.scss
+++ b/src/pages/fields/fields.styles.scss
@@ -57,7 +57,7 @@
 
     h2 {
       display: block;
-      width: 8rem;
+      max-width: 7rem;
       font-size: 1.5rem;
 
       color: #242424b9;
@@ -69,7 +69,7 @@
   .field-header-span {
     color: #4dbc92;
     display: block;
-    width: 8rem;
+    max-width: 7rem;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -176,6 +176,9 @@
     font-family: "Poppins", sans-serif;
     line-height: 1.7;
     font-weight: 400;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
 // .field-right-nocontent {
@@ -337,6 +340,7 @@
     line-height: 1.8;
     margin-bottom: 0;
     font-size: 0.9rem;
+    width: 90%;
   }
 }
 @media screen and (max-width: 1100px) {
