--- a/src/pages/singleField/sfield.styles.scss
+++ b/src/pages/singleField/sfield.styles.scss
@@ -304,6 +304,12 @@
   .sfield-posts {
     padding: 1% 0 2%;
   }
+  .sfield-likes {
+    width: 6.48rem;
+  }
+  .sfield-fav-div {
+    gap: 0 1.1rem;
+  }
   .post-align-left {
     flex-direction: row;
   }
