--- a/src/components/ProfileComp/upcomp.styles.scss
+++ b/src/components/ProfileComp/upcomp.styles.scss
@@ -177,7 +177,7 @@
         height: auto;
         img {
           width: 100%;
-          height: 80%;
+          height: 300px;
           object-fit: cover;
         }
       }
