--- a/src/components/navbar/navbar.styles.scss
+++ b/src/components/navbar/navbar.styles.scss
@@ -21,6 +21,7 @@
   width: 100%;
   height: 4rem;
   padding: 1rem 0 0.8rem;
+  font-family: "Poppins", sans-serif;
 }
 .nav-contents {
   width: 90%;
