--- a/src/components/navbar/navbar.styles.scss
+++ b/src/components/navbar/navbar.styles.scss
@@ -50,6 +50,7 @@
 .select-dropdown {
   width: 12rem;
   padding: 0 0;
+  text-align: r;
 }
 .nav-profile {
   width: 60px;
@@ -74,7 +75,7 @@
     }
   }
   .dropdown {
-    width: 80px;
+    width: 85px;
     height: auto;
     padding: 0.5rem 1rem 0.5rem;
     background-color: rgb(255, 255, 255);
@@ -97,12 +98,15 @@
       color: inherit;
     }
     span {
-      display: block;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 0 0.4rem;
       padding: 0.2rem 0;
       margin: 0.11rem 0 0.3rem;
-      font-weight: 500;
+      font-weight: 400;
       font-size: 0.92rem;
-      font-family: "Quicksand", sans-serif;
+
       cursor: pointer;
       text-align: center;
       letter-spacing: 0.3px;
