--- a/src/constant.styles.scss
+++ b/src/constant.styles.scss
@@ -18,3 +18,63 @@
     color: black;
   }
 }
+.dropdown-item-icon {
+  cursor: pointer;
+  transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
+  &:hover {
+    color: #039c55;
+  }
+  &:active {
+    color: #039c55;
+    transform: scale(0.95);
+  }
+}
+.dropdown-item-container-left {
+  .dropdown-items-list {
+    left: 0 !important;
+    left: inherit;
+  }
+}
+.dropdown-item-container {
+  width: auto;
+  height: auto;
+  padding: 0.3rem;
+
+  border-radius: 10px;
+  filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.034));
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  z-index: 1;
+  // .dropdown-item-icon {
+  // }
+  .dropdown-items-list {
+    width: 6.5rem;
+
+    padding: 0.4rem 0.55rem;
+    background-color: #ffffff;
+    border: 1px solid rgba(0, 0, 0, 0.082);
+    font-size: 0.9rem;
+    position: absolute;
+    bottom: 2rem;
+    right: 0;
+
+    transition: anin 1s cubic-bezier(0.19, 1, 0.22, 1);
+    span {
+      display: flex;
+      align-items: center;
+      font-weight: 400;
+      margin: 0.45rem 0 !important;
+      transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
+      cursor: pointer;
+
+      &:hover {
+        letter-spacing: 0.5px;
+        color: #039c55;
+      }
+      &:active {
+        transform: scale(0.95);
+      }
+    }
+  }
+}
