--- a/src/pages/Profile/up.styles.scss
+++ b/src/pages/Profile/up.styles.scss
@@ -11,7 +11,7 @@
   display: flex;
 
   justify-content: center;
-  border: 3px solid #41d49085;
+  border: 3px solid #13e48225;
   padding: 1.5rem;
   border-radius: 15px;
   box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.048);
@@ -26,26 +26,30 @@
   align-items: center;
   flex-wrap: wrap;
   border-right: 2px solid rgba(0, 0, 0, 0.062);
-  padding-right: 0.7rem;
+  padding-right: 0rem;
+  overflow: hidden;
   .up-profile-img {
     width: 100%;
-    height: 100px;
-    margin-top: 20px;
+    height: 100%;
+    margin-top: 10px;
 
     img {
-      border-radius: 2%;
+      border-radius: 0;
       width: 100%;
       height: 100%;
-      object-fit: contain;
-      filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.048));
+      object-fit: cover;
     }
   }
   .up-sidebar-details {
     position: absolute;
     bottom: 0rem;
+    left: 0;
+    right: 0;
+    z-index: 10;
 
-    width: 90%;
-
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    background: linear-gradient(rgba(255, 255, 255, 0.178), rgb(19, 19, 19));
     .up-p-tag {
       font-family: "Poppins", sans-serif;
       cursor: pointer;
@@ -54,19 +58,28 @@
       justify-content: space-between;
       width: 100%;
       padding-bottom: 0.7rem;
-      color: rgb(27, 27, 27);
-      font-weight: 500;
+      color: rgb(255, 255, 255);
+      font-weight: 400;
       font-size: 0.95rem;
       border-bottom: 2px solid rgba(7, 7, 7, 0.089);
       transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
-      opacity: 0.3;
+      opacity: 0.6;
+      span {
+        display: flex;
+        align-items: center;
+        flex: 1;
+        gap: 0 0.5rem;
+      }
       &:hover {
         border-bottom: 2px solid rgba(7, 7, 7, 0.151);
-        color: rgb(0, 0, 0);
+        color: rgb(255, 255, 255);
       }
     }
     .up-p-tag-active {
       opacity: 1;
+      .up-arraow-icon {
+        transform: rotate(90deg);
+      }
     }
   }
 }
@@ -218,7 +231,17 @@
       height: 160px;
     }
     .up-sidebar-details {
+      width: 100%;
+      background: white;
+      margin-top: 2rem;
+
+      padding: 0;
       .up-p-tag {
+        color: black;
+        font-weight: 500;
+        &:hover {
+          color: rgba(0, 0, 0, 0.753);
+        }
         &:hover .up-arraow-icon {
           transform: rotate(90deg);
         }
@@ -258,9 +281,19 @@
       }
     }
     .up-sidebar-details {
+      width: 100%;
+      background: white;
       margin-top: 2rem;
       position: relative;
       bottom: 0rem;
+      padding: 0;
+      .up-p-tag {
+        color: black;
+        font-weight: 500;
+        &:hover {
+          color: rgba(0, 0, 0, 0.753);
+        }
+      }
     }
   }
   .up-userPost-box {
@@ -268,6 +301,14 @@
     filter: drop-shadow(0px 10px 15px rgba(0, 0, 0, 0));
     h2 {
       font-size: 1.25rem;
+    }
+    .up-userpost-fav {
+      right: 0.5rem;
+      .up-userpost-item-fav {
+        .up-userpost-item-fav-icon {
+          font-size: 0.95rem;
+        }
+      }
     }
   }
 }
