--- a/src/pages/singleField/sfield.styles.scss
+++ b/src/pages/singleField/sfield.styles.scss
@@ -105,6 +105,7 @@
   position: absolute;
   bottom: 1rem;
   right: 0rem;
+  z-index: 2;
   display: flex;
   align-items: center;
   justify-content: flex-end;
@@ -127,6 +128,7 @@
 }
 .sfield-fav {
   padding: 0.25rem 0.3rem;
+
   .sfield-fav-icon {
     font-size: 1.05rem;
 
@@ -318,6 +320,7 @@
     flex-direction: column;
     justify-content: inherit;
     margin-bottom: 3rem;
+    padding-bottom: 5.2rem;
     .sfield-post-text {
       align-self: flex-start;
       width: 100%;
