--- a/src/components/navbar/navbar.styles.scss
+++ b/src/components/navbar/navbar.styles.scss
@@ -75,9 +75,9 @@
     }
   }
   .dropdown {
-    width: 85px;
+    width: 80px;
     height: auto;
-    padding: 0.5rem 1rem 0.5rem;
+    padding: 0.4rem 1rem;
     background-color: rgb(255, 255, 255);
     position: absolute;
     right: 0rem;
@@ -102,8 +102,8 @@
       align-items: center;
       justify-content: center;
       gap: 0 0.4rem;
-      padding: 0.2rem 0;
-      margin: 0.11rem 0 0.3rem;
+      padding: 0.1rem 0;
+      margin: 0.1rem 0 0.3rem;
       font-weight: 400;
       font-size: 0.92rem;
 
