--- a/src/pages/fields/fields.styles.scss
+++ b/src/pages/fields/fields.styles.scss
@@ -316,9 +316,9 @@
       opacity: 0.4;
       position: absolute;
       bottom: 0.2rem;
-      right: 1rem;
+      right: 3.2rem;
       &:hover {
-        opacity: 0.8;
+        color: #00743e;
       }
     }
   }
